--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
 
 body, html, #app, .container {
   height: 100%;
+  margin: 0;
 }
 
 button {
@@ -11,20 +12,34 @@ button {
 }
 .container {
   display: grid;
-  grid-template-columns: auto auto auto 45%;
-  grid-template-rows: 15% auto auto auto 7%;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 15% 85%;
 }
 .banner {
-  grid-column: 1 / span 4;
+  grid-column: 1 / span 2;
   grid-row: 1 / span 1;
   background-color: #222222;
+  color: white;
 
 }
+.tiles {
+  grid-column: 1/span 1;
+  grid-row: 2/span 1;
+  background-color: #FF0000;
+  display: grid;
+  grid-template-columns: 24% 24% 24% 24%;
+  grid-gap: 1%;
+  overflow-y: scroll;
+  overflow-x: none;
+}
 .tile {
-  grid-column-end: span 1;
-  grid-row-end: span 1;
+  grid-column: span 1;
+  background-color: #EE2929;
+  height: 30vh;
+  border-radius: 8px;
 }
 .description {
-  grid-column: 4/ span 1;
-  grid-row: 2 / span 4;
+  grid-column: 2/ span 1;
+  grid-row: 2 / span 1;
+  background-color: #FFDEDE;
 }
