--- a/public/styles.css
+++ b/public/styles.css
@@ -27,10 +27,14 @@ button {
   grid-row: 2/span 1;
   background-color: #FF0000;
   display: grid;
-  grid-template-columns: 24% 24% 24% 24%;
+  grid-template-columns: 23% 23% 23% 23%;
   grid-gap: 1%;
   overflow-y: scroll;
   overflow-x: none;
+  width: 60vw;
+}
+.tilescroll {
+  overflow-y: scroll;
 }
 .tile {
   grid-column: span 1;
